--- a/htdocs/template/main/mainframe.html
+++ b/htdocs/template/main/mainframe.html
@@ -38,7 +38,7 @@
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				           	<ul class="nav navbar-nav">
 				               <li><a href="/www/msg/list/msglist">MessageBoard</a></li>
-				               {{if ($user_level==0 || $user_level==3)}}
+				               {{if ($session_level==0 || $session_level==3)}}
 				               <li><a href="/www/user/list/userlist">UserPage</a></li>
 				               {{/if}}
 				               <li class="active"><a href="/www/main/page">Snakegame</a></li>
