--- a/htdocs/template/main/mainframe.html
+++ b/htdocs/template/main/mainframe.html
@@ -41,6 +41,7 @@
 				               {{if ($session_level==0 || $session_level==3)}}
 				               <li><a href="/www/user/list/userlist">UserPage</a></li>
 				               {{/if}}
+				               <li><a href="/www/user/list/userlist">PersonalPage</a></li>
 				               <li class="active"><a href="/www/main/page">Snakegame</a></li>
 				               <li></li>
 				           	</ul>
